--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title><%= htmlWebpackPlugin.options.isProd ? "" : "dev-" %>电商后台管理系统</title>
+       <!-- 判断什么环境下 渲染这些 Js css  -->
+    <% if(htmlWebpackPlugin.options.isProd){ %>
+        <!-- npgrogress样式文件 -->
+        <link rel="stylesheet" href="https://cdn.staticfile.org/nprogress/0.2.0/nprogress.min.css" />
+        <!-- 富文本样式 -->
+        <!-- 主题样式表-->
+        <link href="https://cdn.quilljs.com/1.3.4/quill.core.css" rel="stylesheet">
+        <link href="https://cdn.quilljs.com/1.3.4/quill.snow.css" rel="stylesheet">
+        <link href="https://cdn.quilljs.com/1.3.4/quill.bubble.css" rel="stylesheet">
+        <!-- <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+        <link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet"> -->
+        <!-- <link rel="stylesheet" href="https://cdn.staticfile.org/quill/3.0.6/quill.core.min.css" />
+        <link rel="stylesheet" href="https://cdn.staticfile.org/quill/3.0.6/quill.snow.min.css" />
+        <link rel="stylesheet" href="https://cdn.staticfile.org/quill/3.0.6/quill.bubble.min.css" /> -->
+        <!-- 引入element-ui样式 -->
+        <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+
+        <script  src="https://cdn.staticfile.org/vue/2.6.11/vue.min.js"></script>
+        <script  src="https://cdn.staticfile.org/vue-router/3.2.0/vue-router.min.js"></script>
+        <script  src="https://cdn.staticfile.org/axios/0.26.0/axios.min.js"></script>
+        <script  src="https://cdn.bootcdn.net/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
+        <script  src="https://cdn.staticfile.org/echarts/5.3.1/echarts.min.js"></script>
+        <script  src="https://cdn.staticfile.org/nprogress/0.2.0/nprogress.min.js"></script>
+        <!-- 引入富文本js -->
+        <script src="https://cdn.quilljs.com/1.3.4/quill.js"></script>
+        <script src="https://cdn.quilljs.com/1.3.4/quill.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue-quill-editor@3.0.6/dist/vue-quill-editor.js"></script>
+        <!-- <script  src="https://cdn.staticfile.org/quill/3.0.6/quill.min.js"></script>
+        <script  src="https://cdn.jsdelivr.net/npm/vue-quill-editor@3.0.6/dist/vue-quill-editor.js"></script> -->
+        <!-- 引入element-ui 组件库 -->
+        <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+    <% } %>
   </head>
   <body>
     <noscript>
